@@ -51,7 +51,7 @@ class FlickrAPI(object):
                    'count'   : 50,
                    'method'  : self.method,
                    'format'  : 'json',
-                   'extras'  : 'owner_name,original_format,media,geo,url_o',
+                   'extras'  : 'description,date_taken,owner_name,original_format,media,geo,url_o',
                    'page'    : page,
                    'nojsoncallback' : '1' }
 
