@@ -1,3 +1,8 @@
+2010-05-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* flickr, fspot, picasa, photoimagegtk.py: Added date taken on
+	  tooltips.
+
 2010-05-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* flickr/__init__.py, api.py: Added checking authorization.
